Add feature to see correct answers and whole quiz
